# slip-to-ledger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  schema.json
.github/workflows/: ci.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: args.ts  main.ts
crates/slip-cli/: Cargo.toml
crates/slip-cli/src/: main.rs
crates/slip-core/: Cargo.toml
crates/slip-core/src/: fraud.rs  lib.rs  ocr_input.rs  parse.rs  preprocess.rs  qr.rs  schema.rs  thai_utils.rs
crates/slip-core/src/banks/: bay.rs  bbl.rs  cimb.rs  gsb.rs  kbank.rs  ktb.rs  mod.rs  scb.rs  tisco.rs  truemoney.rs  ttb.rs  uob.rs
crates/slip-core/src/export/: csv.rs  json.rs  mod.rs
crates/slip-core/src/verify/: local.rs  mod.rs
crates/slip-core/tests/: pipeline.rs
crates/slip-wasm/: Cargo.toml
crates/slip-wasm/src/: lib.rs
docs/: progress.md
samples/: .gitkeep
samples/generator/: Cargo.toml
samples/generator/src/: main.rs
src/reconcile/: mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: export.ts  i18n.ts  main.ts  ocr.ts  parse.ts  state.ts  verify.ts
web/src/__tests__/: fixtures.ts  parse.test.ts
web/src/styles/: app.css  tokens.css
web/src/ui/: App.ts  BatchTable.ts  DetailPanel.ts  DropZone.ts  ExportModal.ts  Hero.ts  Topbar.ts
