[workspace]
resolver = "2"
members = [
    "crates/slip-core",
    "crates/slip-cli",
    "crates/slip-wasm",
    "samples/generator",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/slip-to-ledger"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.7"
inventory = "0.3"
log = "0.4"
