[package]
name = "slip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core parsing, normalization, and verification for Thai bank/wallet payment slips"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell.workspace = true
regex.workspace = true
chrono.workspace = true
image.workspace = true
rqrr.workspace = true
inventory.workspace = true
log.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }
