[package]
name = "slip-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings around slip-core for browser use"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slip-core = { path = "../slip-core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
